--- a/chatroom/package.json
+++ b/chatroom/package.json
@@ -9,7 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
