--- a/chatroom/package.json
+++ b/chatroom/package.json
@@ -8,9 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "better-scroll": "^2.0.5",
     "cookie-parser": "^1.4.5",
+    "echarts": "^4.8.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
